fix shift view buttons

--- a/resources/assets/themes/base.less
+++ b/resources/assets/themes/base.less
@@ -111,26 +111,32 @@ table a > .icon-icon_angel {
 
 .panel-primary .panel-heading a {
   color: @panel-primary-text;
+  background-color: @panel-primary-heading-bg;
 }
 
 .panel-default .panel-heading a {
   color: @panel-default-text;
+  background-color: @panel-default-heading-bg;
 }
 
 .panel-info .panel-heading a {
   color: @panel-info-text;
+  background-color: @panel-info-heading-bg;
 }
 
 .panel-success .panel-heading a {
   color: @panel-success-text;
+  background-color: @panel-success-heading-bg;
 }
 
 .panel-warning .panel-heading a {
   color: @panel-warning-text;
+  background-color: @panel-warning-heading-bg;
 }
 
 .panel-danger .panel-heading a {
   color: @panel-danger-text;
+  background-color: @panel-danger-heading-bg;
 }
 
 .selection .checkbox {
